tests/expectations/compiler/core/algorithms/integers/pedersen64/pedersen64_hash_to_i128.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:23
     |
  28 |         let a: i128 = Pedersen64::hash_to_i128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:23
     |
  29 |         let b: i128 = Pedersen64::hash_to_i128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:23
     |
  30 |         let c: i128 = Pedersen64::hash_to_i128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:23
     |
  31 |         let d: i128 = Pedersen64::hash_to_i128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:23
     |
  32 |         let e: i128 = Pedersen64::hash_to_i128(i8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:23
     |
  33 |         let f: i128 = Pedersen64::hash_to_i128(i16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:23
     |
  34 |         let g: i128 = Pedersen64::hash_to_i128(i32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:23
     |
  35 |         let j: i128 = Pedersen64::hash_to_i128(u8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:23
     |
  36 |         let k: i128 = Pedersen64::hash_to_i128(u16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:23
     |
  37 |         let l: i128 = Pedersen64::hash_to_i128(u32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:23
     |
  38 |         let o: i128 = Pedersen64::hash_to_i128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:23
     |
  40 |         let q: i128 = Pedersen64::hash_to_i128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
